fix layout bug

--- a/Frontend/src/routes/Recipe-History.css
+++ b/Frontend/src/routes/Recipe-History.css
@@ -13,7 +13,3 @@
 .col{
   height: 100%;
 }
-.sideBar{
-  width: 100%;
-  height: 100%;
-}
